--- a/style.css
+++ b/style.css
@@ -6,4 +6,12 @@ h1 {font-size: 300%;
 }
 h1 {border:solid 3px rgb(93, 192, 253);
 } 
-body {background-color: rgb(0, 0, 0);}
+body {background-color: rgb(0, 0, 0);
+}
+p {text-align: center;
+}
+p {font-size: 95%;
+}
+h1 {text-align: center;
+}
+
