--- a/style.css
+++ b/style.css
@@ -1,17 +1,35 @@
-#imab {margin-left: 30%;
-}
-h1 {color: rgb(0, 191, 255);
+h1 {color: rgb(209, 76, 158);
 }
 h1 {font-size: 300%;
 }
-h1 {border:solid 3px rgb(93, 192, 253);
-} 
-body {background-color: rgb(0, 0, 0);
+h1 {border:solid 3px rgb(255, 255, 255);
 }
-p {text-align: center;
+b {color:rgb(253, 253, 253)
 }
-p {font-size: 95%;
+b {font-size: 180%;
+}
+b {text-align: center;
 }
 h1 {text-align: center;
 }
+p {text-align: center;
+}
+p {font-size: 180%;
+}
+#a {margin-left: 15%;
+}
+#b {margin-left: 15%;
+}
+#c {margin-left: 15%;
+}
+#d {margin-left: 15%;
+}
+#e {margin-left: 15%;
+}
+#f {margin-left: 15%;
+}
+#g {margin-left: 15%;
+}
+body {background-color: rgb(255, 192, 239);}
 
+p {color: rgb(255, 66, 192);}
